scrollbar fix

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 html,
 body {
   width: 100%;
